# flight-replay

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/src/flight_replay/: __init__.py  cli.py  models.py  normalize.py  readers.py  stats.py
backend/src/flight_replay/api/: app.py  deps.py  schemas.py
backend/src/flight_replay/api/routes/: flights.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_models.py  test_normalize.py  test_readers.py  test_stats.py
backend/tests/fixtures/: bad_version.jsonl  blank_and_valid.jsonl  malformed.jsonl  valid_two.jsonl
data/normalized/: kmob-kpns.jsonl
data/raw/: mobile_to_pensacola_synthetic_telemetry.jsonl
docs/: telemetry-schema.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: flights.ts
frontend/src/components/: PlaybackControls.tsx  ReplayMap.tsx  TelemetryCharts.tsx
frontend/src/hooks/: usePlayback.ts
frontend/src/lib/: aircraftIcon.ts  aircraftIconData.ts  interpolateTelemetry.ts  phaseMarkers.ts
frontend/src/types/: telemetry.ts
