[project]
name = "flight-replay"
version = "0.1.0"
description = "Flight telemetry debrief platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2",
  "typer",
  "fastapi",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "httpx2",
]

[project.scripts]
flight-replay = "flight_replay.cli:app"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["flight_replay"]
mypy_path = "src"